<resources>
    <string name="app_name">GastoViagem</string>
    <string name="distancia">Distância</string>
    <string name="total_de_quilometros">Total de quilometros</string>
    <string name="preco">Preço</string>
    <string name="preco_por_litro">Preço por litro</string>
    <string name="autonomia">Autonomia</string>
    <string name="kms_por_litro">Kms por litro</string>
    <string name="gasto">SEU GASTO SERA DE:</string>
    <string name="valor">R$ 0,00</string>
    <string name="calcular">Calcular</string>
</resources>