<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:padding="32dp"
    android:orientation="vertical">

    <EditText
        android:id="@+id/edit_distance"
        android:inputType="numberDecimal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/distancia">
    </EditText>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/total_de_quilometros"
        android:gravity="center">
    </TextView>

    <EditText
        android:id="@+id/edit_price"
        android:inputType="numberDecimal"
        android:layout_marginTop="32dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/preco">
    </EditText>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/preco_por_litro"
        android:gravity="center">
    </TextView>

    <EditText
        android:id="@+id/edit_autonomy"
        android:inputType="numberDecimal"
        android:layout_marginTop="32dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/autonomia">
    </EditText>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/kms_por_litro"
        android:gravity="center">
    </TextView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/gasto"
        android:gravity="center"
        android:layout_marginTop="64sp"
        android:textSize="20sp">
    </TextView>

    <TextView
        android:id="@+id/edit_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="16sp"
        android:text="@string/valor"
        android:textColor="#485ABC"
        android:textSize="38sp">
    </TextView>

    <Button
        android:id="@+id/button_cauculate"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:gravity="center"
        android:layout_marginTop="48dp"
        android:backgroundTint="#7DD5A4"
        android:text="@string/calcular"
        android:textSize="24sp">
    </Button>

</LinearLayout>